<resources>
    <!-- app name -->
    <string name="app_name" translatable="false">Aexon</string>
    <!-- home -->
    <string name="home_name">Dasboard Home</string>
    <!-- management app -->
    <string name="aexon_name">Management Applacation</string>
    <!-- settings -->
    <string name="settings_name">System Preference</string>
    <!-- home tag -->
    <string name="home_tag">Home</string>
    <!-- apps tag -->
    <string name="app_tag">Apps</string>
    <!-- settings tag -->
    <string name="settings_tag">Settings</string>
    <!-- active status -->
    <string name="tag_active">Aexon is already active</string>
    <!-- rooted desc -->
    <string name="tag_dec_rooted">In addition, Aexon can be started automatically on boot. If not, please check if your system or third-party tools have restricted&lt;br&gt;You can refer to &lt;a href=&quot;https://dontkillmyapp.com/&quot;&gt;Don\'t kill my app!&lt;/a&gt;.</string>
    <!-- connect shizuku -->
    <string name="tag_cnect_shizuku">Connect Using Shizuku</string>
    <!-- shizuku desc -->
    <string name="dec_shizuku">If Shizuku is installed and running, tap to grant permission and activate enhanced ADB access.</string>
    <!-- not running -->
    <string name="tag_not_running">Required Activation</string>
    <!-- running -->
    <string name="tag_running">Running</string>
    <!-- title view command -->
    <string name="tag_title_view_cmd">View Command</string>
    <!-- title button usage -->
    <string name="tag_btn_copy">Copy</string>
    <!-- cancel button -->
    <string name="tag_btn_cancel">Cancel</string>
    <!-- send button -->
    <string name="tag_btn_send">Send</string>
    <!-- ok button -->
    <string name="tag_btn_ok">Oky</string>
    <!-- reset button -->
    <string name="tag_btn_reset">Reset</string>
    <!-- install button -->
    <string name="tag_btn_install">Install</string>
    <!-- share button -->
    <string name="tag_btn_share">Share</string>
    <!-- stop search button -->
    <string name="tag_btn_stop_notif">Stop searching</string>
    <!-- connect shizuku button -->
    <string name="tag_btn_shizuku">Connect shizuku</string>
    <!-- enter pairing code button -->
    <string name="tag_btn_notif_enter">Enter pairing code</string>
    <!-- enable notifications -->
    <string name="tag_btn_enable_notif">Enable Notification</string>
    <!-- title all usage -->
    <string name="tag_msg_cmd">There are some other considerations, please confirm that you have read the help first.</string>
    <!-- picker dialog -->
    <string name="tag_title_dialog_picker">Choose color</string>
    <!-- click to activate -->
    <string name="tag_aexon_not_run">click to activate Aexon</string>
    <!-- not running status -->
    <string name="tag_aexon_not_running">Aexon not running!</string>
    <!-- title pair notif action -->
    <string name="tag_not_found">Not found</string>
    <!-- start button -->
    <string name="tag_btn_wireless_start">Start</string>
    <string name="tag_btn_shizuku_start">Start</string>
    <string name="tag_btn_root_start">Start</string>
    <!-- dynamic color off -->
    <string name="tag_dec_dynamic_off">Customize primary color</string>
    <!-- dynamic color on -->
    <string name="tag_dec_dynamic_on">Overriden by dynamic color</string>
    <!-- telegram url -->
    <string name="url_tele">https://t.me/gfxaexon</string>
    <!-- whatsapp url -->
    <string name="url_wa">https://whatsapp.com/channel/0029VbDBooX8qJ01Gik6RI3N</string>
    <!-- shizuku not installed -->
    <string name="tag_shizuku_title">Shizuka Not Installed</string>
    <!-- shizuku install desc -->
    <string name="tag_shizuku_dec">Install Shizuku first if you want to use the Shizuku service to run Aexon</string>
    <!-- shizuku toasty -->
    <string name="tag_shizuku_dec_toasty">Please run shizuku first..</string>
    <!-- shizuku playstore url -->
    <string name="tag_url_shizuku">https://play.google.com/store/apps/details?id=moe.shizuku.privileged.api</string>
    <string name="tag_url_donation">https://tako.id/FloraWhin</string>
    <!-- shizuku running -->
    <string name="tag_shizuku_running">Shizuku Running</string>
    <!-- shizuku running desc -->
    <string name="tag_shizuku_running_dec">Shizuku is already running and ready to use</string>
    <!-- shizuku not running -->
    <string name="tag_rish_not_running">Shizuku Not Running</string>
    <!-- shizuku not running desc -->
    <string name="tag_rish_not_running_dec">Please connect Shizuku first before starting</string>
    <!-- root not support -->
    <string name="tag_root_not_support">Not Supported</string>
    <!-- root not support desc -->
    <string name="tag_root_not_support_dec">This device is not rooted</string>
    <!-- title info -->
    <string name="tag_btn_donation">Support / Donation</string>
    <string name="tag_btn_whatsapp">WhatsApp</string>
    <string name="tag_btn_telegram">Telegram</string>
    <!-- error -->
    <string name="tag_error">Error</string>
    <!-- support github desc -->
    <string name="tag_dec_support_github">Aexon is a fully free and open-source project developed by a solo developer using Sketchware and Termux. Feel free to explore the code, contribute, and support my work if you find it helpful!</string>
    <!-- choose language -->
    <string name="tag_choose_language">Choose Language</string>
    <!-- apply button -->
    <string name="tag_btn_apply">Apply</string>
    <!-- save log -->
    <string name="tag_save_log">Save Log Results</string>
    <!-- using busybox -->
    <string name="tag_using_busybox">Using Busybox</string>
    <!-- delete log -->
    <string name="tag_delete_log">Delete Logs</string>
    <!-- open -->
    <string name="tag_lounch">Open</string>
    <!-- uninstall -->
    <string name="tag_uninstall">Uninstall</string>
    <!-- follow -->
    <string name="tag_ikutin">Follow</string>
    <!-- text menu home -->
    <string name="tag_home">Home</string>
    <!-- text menu aexon -->
    <string name="tag_aexon">Aexon</string>
    <!-- text menu settings -->
    <string name="tag_settings">Settings</string>
    <!-- desc home -->
    <string name="tag_dec_home">Dashboard Home</string>
    <!-- desc aexon -->
    <string name="tag_dec_aexon">Managament Application</string>
    <!-- desc settings -->
    <string name="tag_dec_settings">System Preference</string>
    <!-- text nav home -->
    <string name="tag_nav_home">Home</string>
    <!-- text nav aexon -->
    <string name="tag_nav_aexon">Aexon</string>
    <!-- text nav settings -->
    <string name="tag_nav_settings">Settings</string>
    <!-- title github -->
    <string name="tag_contributor">Contributor</string>
    <!-- github repo url -->
    <string name="tag_url_github_repo">https://github.com/fora2323/Aexon</string>
    <!-- github fora2323 -->
    <string name="tag_name_fora2323">弗洛拉</string>
    <string name="tag_username_fora2323">fora2323</string>
    <string name="tag_action_fora2323">Lead Developer</string>
    <string name="link_github_fora2323">https://github.com/fora2323</string>
    <!-- github nezuka -->
    <string name="tag_name_nezuka">Nezuka</string>
    <string name="tag_username_nezuka">NezukaStudio</string>
    <string name="tag_action_nezuka">Aexon Author</string>
    <string name="link_github_nezuka">https://github.com/NezukaStudio</string>
    <!-- github chikoo -->
    <string name="tag_name_chikoo">Chikoo</string>
    <string name="tag_username_chikoo">Chikoo-kw</string>
    <string name="tag_action_chikoo">Repo Maintenance</string>
    <string name="link_github_chikoo">https://github.com/Chikoo-kw</string>
    <!-- github nov -->
    <string name="tag_name_nov">novzzmanager-create</string>
    <!-- nov tidak memiliki username -->
    <!--<string name="tag_username_nov">novzzmanager-create</string>-->
    <string name="tag_action_nov">Work Aexon</string>
    <string name="link_github_nov">https://github.com/novzzmanager-create</string>
    <!-- title debug class -->
    <string name="tag_title_debug">Aww, Snap!</string>
    <string name="tag_hint_debug">Aexon has crashed. See the details below.</string>
    <string name="tag_sub_title_debug">Crash detail:</string>
    <string name="tag_btn_copy_debug">Copy Log</string>
    <string name="tag_btn_restart_debug">Restart</string>
        <!-- title menu toolbar -->
    <string name="tag_title_home_toolbar">Home</string>
    <string name="tag_sub_title_home_toolbar">Dasboard Home</string>
    <string name="tag_title_app_toolbar">Apps</string>
    <string name="tag_sub_title_app_toolbar">Management Applacation</string>
    <string name="tag_title_settings_toolbar">Settings</string>
    <string name="tag_sub_title_settings_toolbar">System Preference</string>
</resources>