<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="12dp"
		android:background="@color/colorSurfaceContainer"
		android:gravity="center_horizontal"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/handle"
			android:layout_width="40dp"
			android:layout_height="6dp"
			android:padding="8dp"
			android:background="@color/colorOnPrimaryDark"
			android:orientation="horizontal" />
		<TextView
			android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="28dp"
			android:paddingLeft="10dp"
			android:paddingTop="4dp"
			android:paddingRight="10dp"
			android:paddingBottom="4dp"
			android:text="@string/tag_title_view_cmd"
			android:textSize="17sp"
			android:textStyle="bold"
			android:textColor="@color/colorOnSurface" />
		<TextView
			android:id="@+id/dec_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingTop="4dp"
			android:paddingRight="10dp"
			android:paddingBottom="4dp"
			android:text="TextView"
			android:textSize="14sp"
			android:textColor="@color/colorOnSurfaceVariant" />
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:padding="4dp"
			android:gravity="right|center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/btn_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="20dp"
				android:paddingTop="12dp"
				android:paddingRight="20dp"
				android:paddingBottom="12dp"
				android:text="@string/tag_btn_cancel"
				android:textSize="14sp"
				android:textStyle="bold"
				android:textColor="@color/colorPrimary" />
			<LinearLayout
				android:id="@+id/linear3"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:padding="8dp"
				android:orientation="vertical"
				android:layout_weight="1" />
			<TextView
				android:id="@+id/btn_share"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="20dp"
				android:paddingTop="12dp"
				android:paddingRight="20dp"
				android:paddingBottom="12dp"
				android:text="@string/tag_btn_share"
				android:textSize="14sp"
				android:textStyle="bold"
				android:textColor="@color/colorPrimary" />
			<TextView
				android:id="@+id/btn_copy"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="20dp"
				android:paddingTop="12dp"
				android:paddingRight="20dp"
				android:paddingBottom="12dp"
				android:text="@string/tag_btn_copy"
				android:textSize="14sp"
				android:textStyle="bold"
				android:textColor="@color/colorPrimary" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
