<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorSurface"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="9dp"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/imageview1"
				android:layout_width="65dp"
				android:layout_height="65dp"
				android:padding="6dp"
				android:src="@drawable/ic_info"
				android:scaleType="fitStart" />
			<LinearLayout
				android:id="@+id/linear1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="6dp"
				android:gravity="center_vertical"
				android:orientation="vertical">
				<TextView
					android:id="@+id/textview1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="4dp"
					android:text="@string/tag_title_debug"
					android:textSize="24sp"
					android:textStyle="bold"
					android:textColor="@color/colorError" />
				<TextView
					android:id="@+id/textview2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tag_hint_debug"
					android:textSize="14sp"
					android:textColor="@color/colorOnSurfaceVariant" />
			</LinearLayout>
		</LinearLayout>
		<TextView
			android:id="@+id/textview3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="16dp"
			android:paddingTop="10dp"
			android:paddingRight="15dp"
			android:paddingBottom="5dp"
			android:text="@string/tag_sub_title_debug"
			android:textSize="15sp"
			android:textStyle="bold"
			android:textColor="@color/colorOnSurface" />
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:paddingLeft="11dp"
			android:paddingTop="12dp"
			android:paddingRight="11dp"
			android:paddingBottom="14dp"
			android:orientation="vertical"
			android:layout_weight="1">
			<LinearLayout
				android:id="@+id/log_container"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/colorSurfaceContainerHigh"
				android:orientation="vertical">
				<ScrollView
					android:id="@+id/vscroll1"
					android:layout_width="match_parent"
					android:layout_height="match_parent">
					<TextView
						android:id="@+id/textview4"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="TextView"
						android:textSize="14sp"
						android:textColor="@color/colorOnSurfaceVariant" />
				</ScrollView>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/btn_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:background="@color/colorSurfaceContainerHigh"
			android:orientation="horizontal">
			<com.aexon.widget.AexonCompatButton
				android:id="@+id/button1"
				android:layout_width="wrap_content"
				android:layout_height="45dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="6dp"
				android:layout_marginRight="6dp"
				android:layout_marginBottom="6dp"
				android:paddingLeft="18dp"
				android:paddingTop="4dp"
				android:paddingRight="18dp"
				android:paddingBottom="4dp"
				android:layout_weight="1"
				app:ax_btn_text="@string/tag_btn_copy_debug"
				app:ax_btn_textSize="@dimen/text_size_small"
				app:ax_btn_radius="@dimen/card_radius_max"
				app:ax_btn_icon="@drawable/ic_copy"
				app:ax_btn_iconSize="@dimen/img_size_icon_medium"
				android:elevation="@dimen/card_evalution" />
			<com.aexon.widget.AexonCompatButton
				android:id="@+id/button2"
				android:layout_width="wrap_content"
				android:layout_height="45dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="6dp"
				android:layout_marginRight="6dp"
				android:layout_marginBottom="6dp"
				android:paddingLeft="18dp"
				android:paddingTop="4dp"
				android:paddingRight="18dp"
				android:paddingBottom="4dp"
				android:layout_weight="1"
				app:ax_btn_text="@string/tag_btn_restart_debug"
				app:ax_btn_textSize="@dimen/text_size_small"
				app:ax_btn_radius="@dimen/card_radius_max"
				app:ax_btn_icon="@drawable/ic_restart"
				app:ax_btn_iconSize="@dimen/img_size_icon_medium"
				android:elevation="@dimen/card_evalution" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
