<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear12"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:fitsSystemWindows="true">
		<LinearLayout
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:paddingLeft="6dp"
			android:background="@color/colorSurface"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/imageview1"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:padding="8dp"
				android:src="@drawable/ic_arrow_back"
				android:scaleType="centerInside"
				android:layout_gravity="center_vertical" />
			<TextView
				android:id="@+id/textview1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:gravity="center_vertical"
				android:text="Activation"
				android:textSize="22sp"
				android:textStyle="bold"
				android:includeFontPadding="false" />
		</LinearLayout>
		<ScrollView
			android:id="@+id/vscroll1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/colorSurface"
			android:scrollbars="none">
			<LinearLayout
				android:id="@+id/linear1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="9dp"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/card1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="6dp"
					android:paddingLeft="12dp"
					android:paddingTop="15dp"
					android:paddingRight="12dp"
					android:paddingBottom="10dp"
					android:background="@color/colorSurfaceContainer"
					android:orientation="vertical"
					android:elevation="@dimen/card_evalution_small">
					<LinearLayout
						android:id="@+id/linear11"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="6dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/imageview6"
							android:layout_width="35dp"
							android:layout_height="35dp"
							android:padding="5dp"
							android:src="@drawable/ic_shizuku"
							android:scaleType="centerCrop" />
						<TextView
							android:id="@+id/textview2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingLeft="12dp"
							android:paddingTop="8dp"
							android:paddingRight="8dp"
							android:paddingBottom="8dp"
							android:text="@string/tag_cnect_shizuku"
							android:textSize="16sp"
							android:textStyle="bold"
							android:includeFontPadding="false" />
					</LinearLayout>
					<TextView
						android:id="@+id/textview3"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:paddingLeft="8dp"
						android:paddingTop="12dp"
						android:paddingRight="8dp"
						android:paddingBottom="6dp"
						android:text="@string/dec_shizuku"
						android:textSize="12sp"
						android:includeFontPadding="false" />
					<com.aexon.widget.AexonCompatButton
						android:id="@+id/connect_shizuku"
						android:layout_width="wrap_content"
						android:layout_height="38dp"
						android:layout_margin="6dp"
						app:ax_btn_text="@string/tag_btn_shizuku"
						app:ax_btn_textSize="@dimen/text_size_small"
						app:ax_btn_radius="@dimen/card_radius_max"
						app:ax_btn_icon="@drawable/ic_shizuku"
						app:ax_btn_iconSize="@dimen/img_size_icon_medium"
						android:elevation="@dimen/card_evalution_small" />
					<com.aexon.widget.AexonCompatButton
						android:id="@+id/start_shizuku"
						android:layout_width="wrap_content"
						android:layout_height="38dp"
						android:layout_margin="6dp"
						app:ax_btn_text="@string/tag_btn_shizuku_start"
						app:ax_btn_textSize="@dimen/text_size_small"
						app:ax_btn_radius="@dimen/card_radius_max"
						app:ax_btn_icon="@drawable/ic_play"
						app:ax_btn_iconSize="@dimen/img_size_icon_medium"
						android:elevation="@dimen/card_evalution_small" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/card2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="6dp"
					android:paddingLeft="12dp"
					android:paddingTop="15dp"
					android:paddingRight="12dp"
					android:paddingBottom="10dp"
					android:background="@color/colorSurfaceContainer"
					android:orientation="vertical"
					android:elevation="@dimen/card_evalution_small">
					<LinearLayout
						android:id="@+id/linear3"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="6dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/imageview2"
							android:layout_width="35dp"
							android:layout_height="35dp"
							android:padding="5dp"
							android:src="@drawable/ic_computer"
							android:scaleType="centerCrop" />
						<TextView
							android:id="@+id/textview4"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingLeft="12dp"
							android:paddingTop="8dp"
							android:paddingRight="8dp"
							android:paddingBottom="8dp"
							android:text="Start connecting to the computer"
							android:textSize="16sp"
							android:textStyle="bold"
							android:includeFontPadding="false" />
					</LinearLayout>
					<TextView
						android:id="@+id/textview5"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:paddingLeft="8dp"
						android:paddingTop="8dp"
						android:paddingRight="8dp"
						android:paddingBottom="2dp"
						android:text="For devices without root, you need to use adb to start Aexon (requires computer connection). This process needs to be repeated every time the device is restarted"
						android:textSize="12sp"
						android:includeFontPadding="false" />
					<com.aexon.widget.AexonCompatButton
						android:id="@+id/view_cmd"
						android:layout_width="wrap_content"
						android:layout_height="38dp"
						android:layout_margin="6dp"
						app:ax_btn_text="@string/tag_title_view_cmd"
						app:ax_btn_textSize="@dimen/text_size_small"
						app:ax_btn_radius="@dimen/card_radius_max"
						app:ax_btn_icon="@drawable/ic_code"
						app:ax_btn_iconSize="@dimen/img_size_icon_medium"
						android:elevation="@dimen/card_evalution_small" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/card3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="6dp"
					android:paddingLeft="12dp"
					android:paddingTop="15dp"
					android:paddingRight="12dp"
					android:paddingBottom="10dp"
					android:background="@color/colorSurfaceContainer"
					android:orientation="vertical"
					android:elevation="@dimen/card_evalution_small">
					<LinearLayout
						android:id="@+id/linear8"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="6dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/imageview4"
							android:layout_width="35dp"
							android:layout_height="35dp"
							android:padding="5dp"
							android:src="@drawable/ic_security"
							android:scaleType="centerCrop" />
						<TextView
							android:id="@+id/textview6"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingLeft="12dp"
							android:paddingTop="8dp"
							android:paddingRight="8dp"
							android:paddingBottom="8dp"
							android:text="Start (for rooted devices)"
							android:textSize="16sp"
							android:textStyle="bold"
							android:includeFontPadding="false" />
					</LinearLayout>
					<TextView
						android:id="@+id/textview7"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:paddingLeft="8dp"
						android:paddingTop="8dp"
						android:paddingRight="8dp"
						android:paddingBottom="6dp"
						android:text="@string/tag_dec_rooted"
						android:textSize="12sp"
						android:includeFontPadding="false" />
					<com.aexon.widget.AexonCompatButton
						android:id="@+id/start_root"
						android:layout_width="wrap_content"
						android:layout_height="38dp"
						android:layout_margin="6dp"
						app:ax_btn_text="@string/tag_btn_root_start"
						app:ax_btn_textSize="@dimen/text_size_small"
						app:ax_btn_radius="@dimen/card_radius_max"
						app:ax_btn_icon="@drawable/ic_play"
						app:ax_btn_iconSize="@dimen/img_size_icon_medium"
						android:elevation="@dimen/card_evalution_small" />
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>
